Progress towards tokenizing code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -38,7 +38,10 @@
 			"type": "node",
 			"request": "launch",
 			"name": "Run Mocha Current File",
-			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+            "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+            "runtimeArgs": [
+                "--harmony_regexp_lookbehind"
+            ],
 			"args": [
 				"--timeout","999999",
 				"--colors",
