Make sure the tests can be run on Node 8

--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "tscv": "tsc -v",
     "coverage": "npm run generate-code-coverage",
     "generate-code-coverage": "NODE_ENV=test nyc npm run test-ts",
-    "test-ts": "NODE_ENV=test mocha --require ts-node/register --recursive --bail \"src/**/*.test.ts\"",
-    "test-watch": "npm run build && mocha --require ts-node/register --watch --recursive \"src/**/*.test.ts\"",
+    "test-ts": "NODE_ENV=test mocha --harmony_regexp_lookbehind --require ts-node/register --recursive --bail \"src/**/*.test.ts\"",
+    "test-ts-file": "NODE_ENV=test mocha --harmony_regexp_lookbehind --require ts-node/register",
+    "test-watch": "npm run build && mocha --harmony_regexp_lookbehind --require ts-node/register --watch --recursive \"src/**/*.test.ts\"",
     "prepublish": "npm run lint && npm run clean-build && npm test",
     "coverage-coveralls": "nyc report --reporter=text-lcov | coveralls",
     "travis-coverage": "npm run generate-code-coverage && npm run coverage-coveralls",
     "which": "which node && echo $PATH",
-    "test-spec": "mocha --recursive \"dist/**/*.spec.js\"",
-    "test-unit": "mocha --recursive \"dist/**/*.test.js\"",
+    "test-spec": "mocha --harmony_regexp_lookbehind --recursive \"dist/**/*.spec.js\"",
+    "test-unit": "mocha --harmony_regexp_lookbehind --recursive \"dist/**/*.test.js\"",
     "test": "npm run test-unit && npm run test-spec"
   },
   "repository": {
