--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "tscv": "tsc -v",
     "coverage": "npm run generate-code-coverage",
     "generate-code-coverage": "NODE_ENV=test nyc npm run test-ts",
-    "test-ts": "NODE_ENV=test mocha --harmony_regexp_lookbehind --require ts-node/register --recursive --bail \"src/**/*.test.ts\"",
-    "test-ts-file": "NODE_ENV=test mocha --harmony_regexp_lookbehind --require ts-node/register",
-    "test-watch": "npm run build && mocha --harmony_regexp_lookbehind --require ts-node/register --watch --recursive \"src/**/*.test.ts\"",
+    "test-ts": "NODE_ENV=test mocha --exit --harmony_regexp_lookbehind --require ts-node/register --recursive --bail \"src/**/*.test.ts\"",
+    "test-ts-file": "NODE_ENV=test mocha --exit --harmony_regexp_lookbehind --require ts-node/register",
+    "test-watch": "npm run build && mocha --exit --harmony_regexp_lookbehind --require ts-node/register --watch --recursive \"src/**/*.test.ts\"",
     "prepublish": "npm run lint && npm run clean-build && npm test",
     "coverage-coveralls": "nyc report --reporter=text-lcov | coveralls",
     "travis-coverage": "npm run generate-code-coverage && npm run coverage-coveralls",
@@ -62,7 +62,7 @@
     "@types/chai": "^4.1.2",
     "@types/comment-json": "^1.1.1",
     "@types/configstore": "^2.1.1",
-    "@types/fs-extra": "^4.0.7",
+    "@types/fs-extra": "^4.0.8",
     "@types/glob": "^5.0.35",
     "@types/lorem-ipsum": "^1.0.2",
     "@types/minimatch": "^3.0.3",
@@ -95,7 +95,7 @@
     "cspell-dict-php": "^1.0.2",
     "cspell-dict-python": "^1.0.3",
     "cspell-dict-rust": "^1.0.0",
-    "cspell-lib": "^2.0.1",
+    "cspell-lib": "^2.0.2",
     "cspell-trie": "^2.0.3",
     "fs-extra": "^5.0.0",
     "gensequence": "^2.1.1",
