--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,8 @@
         "**/node_modules": true,
         "**/bower_components": true,
         "dist": true
-    }
+    },
+    "cSpell.words": [
+        "readwrite"
+    ]
 }
