--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,38 @@
         "dist": true
     },
     "cSpell.words": [
-        "readwrite"
-    ]
+        "EPUB",
+        "backend",
+        "readwrite",
+        "toolchain"
+    ],
+    "cSpell.enabledLanguageIds": [
+        "asciidoc",
+        "c",
+        "cpp",
+        "csharp",
+        "css",
+        "go",
+        "handlebars",
+        "html",
+        "jade",
+        "javascript",
+        "javascriptreact",
+        "json",
+        "latex",
+        "less",
+        "markdown",
+        "php",
+        "plaintext",
+        "pub",
+        "python",
+        "restructuredtext",
+        "rust",
+        "scss",
+        "text",
+        "typescript",
+        "typescriptreact",
+        "yml"
+    ],
+    "cSpell.ignoreRegExpList": ["email"]
 }
